{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 319,
  "lineage": "a3e74752-47bd-af14-1deb-3254f161ce50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce557e5a77c770a",
            "association_id": "eipassoc-00f626abd823bed53",
            "domain": "vpc",
            "id": "eipalloc-0bce557e5a77c770a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ea2dbab5ecbe9efb",
            "private_dns": "ip-10-0-3-45.ap-south-1.compute.internal",
            "private_ip": "10.0.3.45",
            "public_dns": "ec2-3-108-32-168.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.32.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_Dev"
            },
            "tags_all": {
              "Name": "eip_Dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:internet-gateway/igw-03c60e085986f7c80",
            "id": "igw-03c60e085986f7c80",
            "owner_id": "299769248600",
            "tags": {
              "Name": "igw-Dev"
            },
            "tags_all": {
              "Name": "igw-Dev"
            },
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bce557e5a77c770a",
            "association_id": "eipassoc-00f626abd823bed53",
            "connectivity_type": "public",
            "id": "nat-0672a220d8f256b2a",
            "network_interface_id": "eni-0ea2dbab5ecbe9efb",
            "private_ip": "10.0.3.45",
            "public_ip": "3.108.32.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035ac33387efff2c3",
            "tags": {
              "Name": "nat-dev"
            },
            "tags_all": {
              "Name": "nat-dev"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:route-table/rtb-04ec60bb84b251673",
            "id": "rtb-04ec60bb84b251673",
            "owner_id": "299769248600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0672a220d8f256b2a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt-Dev"
            },
            "tags_all": {
              "Name": "private_rt-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:route-table/rtb-068b9ca92c4289143",
            "id": "rtb-068b9ca92c4289143",
            "owner_id": "299769248600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c60e085986f7c80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt-Dev"
            },
            "tags_all": {
              "Name": "public_rt-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43a98339d4fe697",
            "route_table_id": "rtb-04ec60bb84b251673",
            "subnet_id": "subnet-05508419ad10d2095"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0215e93e5c6ea1617",
            "route_table_id": "rtb-04ec60bb84b251673",
            "subnet_id": "subnet-0050c4468e9106068"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnets",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c1cee431a527ba3",
            "route_table_id": "rtb-068b9ca92c4289143",
            "subnet_id": "subnet-035ac33387efff2c3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cf1c620e417ca75",
            "route_table_id": "rtb-068b9ca92c4289143",
            "subnet_id": "subnet-0a4761225b69215aa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:subnet/subnet-05508419ad10d2095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05508419ad10d2095",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299769248600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1-Dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-1-Dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:subnet/subnet-0050c4468e9106068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0050c4468e9106068",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299769248600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2-Dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-2-Dev",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:subnet/subnet-035ac33387efff2c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035ac33387efff2c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299769248600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-Dev",
              "kubernenets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1-Dev",
              "kubernenets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:subnet/subnet-0a4761225b69215aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4761225b69215aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299769248600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2-Dev",
              "kubernenets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-2-Dev",
              "kubernenets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bdfd4c0b1e7f1cd8"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:299769248600:vpc/vpc-0bdfd4c0b1e7f1cd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a2cdcf6f10d701d",
            "default_route_table_id": "rtb-0234d74479e209618",
            "default_security_group_id": "sg-0e50d246890f5d23e",
            "dhcp_options_id": "dopt-01c781dcda338779f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdfd4c0b1e7f1cd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0234d74479e209618",
            "owner_id": "299769248600",
            "tags": {
              "Environment": "Dev",
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}